--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header{
+  font-family: Tahoma, Verdana, Geneva, sans-serif;
+  display:flex;
+  justify-content: center;
+  text-align: center;
+  height: 280px;
+
+  flex-direction: column;
+
+}
+nav{
+  margin-top: 60px;
+}
+nav ul{
+  list-style-type: none;
+  display:flex;
+  flex-direction: row;
+  padding-top: 12px;
+  justify-content: center;
+}
+
+nav li{
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 9px;
+ 
+}
+
+.hometab img{
+  height:160px;
+  width: auto;
+  transition-duration: 0.35s;
+}
+
+.hometab img:hover{
+  height:160px;
+  width: auto;
+  transform: rotate(180deg);
+}
+
+.dropcontent{
+  overflow: hidden;
+  padding-top: 5px;
+  position:absolute;
+  z-index: 1;
+  height: 0px;
+  width: 85px;
+  margin-left: 15px;
+  transition: 0.4s ease-in;
+
+  
+}
+.dropcontent h5{
+  padding-bottom: 10px;
+}
+
+.dropdown{
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown:hover .dropcontent{
+  height: 110px;
+}
+.dropcontent h5{
+  text-align: left;
+  font-family: Tahoma, Verdana, Geneva, sans-serif;
+}
+
+nav h3:hover, nav h5:hover{
+  color: #39ff14;
+}
+
+.title{
+  text-align: left;
+  margin-left: 100px;
+  margin-top: 15px;
+  width: 100px;
+
+}
+
+.borderref{
+  border-bottom: 3px solid black;
+  padding-top: 10px;
 }
