--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ header{
 
 }
 nav{
-  margin-top: 60px;
+  margin-top: 0px;
 }
 nav ul{
   list-style-type: none;
@@ -30,6 +30,9 @@ nav li{
   padding-right: 15px;
   padding-bottom: 9px;
  
+}
+.hometab{
+  margin-top: -40px;
 }
 
 .hometab img{
@@ -79,13 +82,85 @@ nav h3:hover, nav h5:hover{
 
 .title{
   text-align: left;
-  margin-left: 100px;
-  margin-top: 15px;
+  margin-left: 150px;
+  margin-top: -120px;
   width: 100px;
-
+  height: 100px;
+  font-family: Tahoma, Verdana, Geneva, sans-serif;
+  padding-top: 40px;
 }
 
 .borderref{
   border-bottom: 3px solid black;
+  margin-top: 55px;
+}
+
+nav a{
+  text-decoration: none;
+  color: black;
+}
+
+footer{
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif; 
+  
+}
+
+
+.footername{
+  margin-left: 200px;
+  width: 200px;
+  height: auto;
+  background-color: red;
+}
+
+.itemcontainer{
+  background-color: #e7e7e7;
+  
+}
+
+.itemcontainer:hover{
+  border: 2px solid black;
+
+}
+
+.content .catalogcontent{
+  justify-content: center;
+}
+
+
+
+.catalogcontent{
+  display: grid;
+  gap: 50px;
+  grid-template-columns: 400px 400px 400px ;
+  grid-template-rows: 800px 800px 800px;
+
+  padding-top: 50px;
+}
+
+.clothesimage{
+  justify-content: center;
+  display:flex;
+
+}
+
+.clothesimage img{
+  padding-top: 30px;
+  width: 350px;
+  height: auto;
+}
+p{
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif; 
+}
+.clothesdescription{
+
+  margin-top: 20px;
+  justify-content: center;
+  display:flex;
+}
+
+.colourbuttons{
+  display: flex;
+  justify-content: center;
   padding-top: 10px;
 }
