--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,7 @@ footer{
 }
 
 .itemcontainer:hover{
-  border: 2px solid black;
+  background-color: #d8d8d8;
 
 }
 
@@ -379,8 +379,8 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .footerlove{
-  margin-left: 1000px;
-  margin-top: -35px;
+  margin-left: 200px;
+  margin-top: 200px;
 
 }
 
@@ -389,7 +389,7 @@ h1, h2, h3, h4, h5, h6{
   margin-top: 100px;
 }
 
-.devsocials img{
+.devsocials img, .sitesocials img{
   width: 30px;
   height: auto;
   margin-left: 15px;
@@ -397,13 +397,56 @@ h1, h2, h3, h4, h5, h6{
   
 
 }
+
+.devsocials img:hover, .sitesocials img:hover{
+  opacity: 0.5;
+}
+
+
 .devsocials{
   margin-left: 240px;
-  margin-top: 30px;
+  margin-top: -200px;
 }
-.devsocials a{
+
+.devsocials a, .sitesocials a{
   text-decoration: none;
+}
 
+.sitesocials{
+  margin-left: 980px;
+  margin-top: -30px;
 
+}
+
+.followanywhere{
+  margin-left: 940px;
+  margin-top: -90px;
+  margin-bottom: 50px;
+  width: 200px;
+
+}
+
+.arrowicons{
+  margin-top: -260px;
+  padding-bottom: 210px;
+
+  
+}
+.backarrow, .frontarrow{
+  display: inline-block;
+}
+.backarrow img, .frontarrow img{
+  opacity: 0.65;
+}
+.backarrow{
+  margin-left: 30px;
+
+}
+.frontarrow{
+  margin-left: 260px;
+}
+
+.frontarrow img:hover, .backarrow img:hover{
+  opacity: 1;
 
 }
