--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 header{
@@ -449,4 +450,40 @@ h1, h2, h3, h4, h5, h6{
 .frontarrow img:hover, .backarrow img:hover{
   opacity: 1;
 
+}
+
+.footertitle{
+  display: flex;
+  justify-content: center;
+  color: #c2c2c2;
+  font-size: 30px;
+
+}
+.footertitle a{
+  text-decoration: none;
+  color: #c2c2c2;
+}
+#newpending{
+  display:flex;
+  justify-content: center;
+  margin-top: 120px;
+  
+}
+
+#newpending h3{
+  font-size: 25px;
+  height: 80px;
+  width: 330px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  line-height: 80px;
+  border-radius: 0
+}
+.gallerydescription{
+  margin-top: 100px;
+  margin-left: 150px;
+  width: 600px;
+ 
+  padding-bottom: 100px;
 }
